DuPont DevSB/src/objects/RecordTypeSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Settings for a particular RecordType</description>
    <fields>
        <fullName>CompanyMailingAddress__c</fullName>
        <description>Setting for automated Contact/Company Mailing Address</description>
        <inlineHelpText>Setting for automated Contact/Company Mailing Address</inlineHelpText>
        <label>Company Mailing Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <description>RecordType FullName (Object API Name + &apos;.&apos; + DeveloperName)</description>
        <externalId>true</externalId>
        <inlineHelpText>RecordType DeveloperName</inlineHelpText>
        <label>FullName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OppCompanyRole__c</fullName>
        <description>This field stores the Opp Company Role values for DPP business.</description>
        <label>OppCompanyRole</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppCustomProbability__c</fullName>
        <description>Opportunity Stage Custom Probability: adjustment</description>
        <label>OppCustomProbability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppProductScheduler__c</fullName>
        <description>Settings for the OppProductScheduler</description>
        <inlineHelpText>Settings for the OppProductScheduler</inlineHelpText>
        <label>OppProductScheduler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal__c</fullName>
        <description>Stores the Id from the Site Object record for a Portal related to a given Contact Record Type: tThe portal access request wizard executed from a Contact Record checks for the portal name mapped to the Contact recordType.</description>
        <inlineHelpText>Displays the portal name mapped to a Contact recordType</inlineHelpText>
        <label>Portal</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReasonIsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reason is required for this record when checked.</description>
        <label>ReasonIsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReasonRoot__c</fullName>
        <description>Unique Name of the Reason Rool</description>
        <inlineHelpText>Unique Name of the Reason Root</inlineHelpText>
        <label>Reason Root</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAR__c</fullName>
        <label>SAR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SegmentIsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Primary Segment Required for this recordtype.</description>
        <inlineHelpText>Is the Primary Segment Required for this recordtype.</inlineHelpText>
        <label>SegmentIsRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SegmentationRoot__c</fullName>
        <description>Developer Name of Segmentation Root</description>
        <inlineHelpText>Developer Name of Segmentation Root</inlineHelpText>
        <label>Segmentation Root</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>RecordType Settings</label>
</CustomObject>